<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/txtInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="100sp"
        android:gravity="end"
        android:layout_marginLeft = "5sp"
        android:layout_marginRight = "5sp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:orientation="horizontal"
        android:layout_marginBottom="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btn1"
            android:text="@string/btn1"/>
        <Button
            android:id="@+id/btn2"
            android:text="@string/btn2"/>
        <Button
            android:id="@+id/btn3"
            android:text="@string/btn3"/>
        <Button
            android:id="@+id/btn4"
            android:text="@string/btn4"/>
        <Button
            android:id="@+id/btn5"
            android:text="@string/btn5"/>
        <Button
            android:id="@+id/btn6"
            android:text="@string/btn6"/>
        <Button
            android:id="@+id/btn7"
            android:text="@string/btn7"/>
        <Button
            android:id="@+id/btn8"
            android:text="@string/btn8"/>
        <Button
            android:id="@+id/btn9"
            android:text="@string/btn9"/>

        <Button
            android:id="@+id/btnclear"
            android:text="@string/btnclear"
            android:layout_row="3"
            android:layout_column="2" />

        <Button
            android:id="@+id/btn0"
            android:text="@string/btn0"
            android:layout_row="3"
            android:layout_column="1" />
    </GridLayout>
</RelativeLayout>